Ignore .idea directory for PyCharm
Change-Id: I6412483e2daf669fe89737a720855074daee62e3

--- a/.gitignore
+++ b/.gitignore
@@ -133,8 +133,5 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-Supprimerait .idea/.gitignore
-Supprimerait .idea/dictionaries/
-Supprimerait .idea/inspectionProfiles/
-Supprimerait .idea/modules.xml
-Supprimerait .idea/vcs.xml
+# Pycharm
+.idea/
